--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 html, body, #root {
   width: 100%;
   height: 100%;
