integrating stats and extra information

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@
 
 html, body, #root {
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -39,8 +39,8 @@ body {
 .app {
   position: relative;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  overflow: visible;
 }
 
 canvas {
