--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 .app {
   position: relative;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  overflow: visible;
 }
 
 .skip-link {
